Fixing package.json

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.3",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:erickzanardo/git-cutlass.git"
   },
   "bin": {
     "gitc": "./gitc"
