--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:erickzanardo/git-cutlass.git"
+    "url": "https://github.com/erickzanardo/blessed.git"
   },
   "bin": {
     "gitc": "./gitc"
